--- a/frontend/src/components/modals/signInModal/signInModal.html
+++ b/frontend/src/components/modals/signInModal/signInModal.html
@@ -1,26 +1,66 @@
-<div class="modal fade" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="signInModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="signInModalLabel">Sign In</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form id="sign-in-form">
-            <div class="form-group">
-              <label for="signInEmail">Email address</label>
-              <input type="email" class="form-control" id="signInEmail" required>
-            </div>
-            <div class="form-group">
-              <label for="signInPassword">Password</label>
-              <input type="password" class="form-control" id="signInPassword" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Sign In</button>
-          </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign In</title>
+  <link rel="stylesheet" href="components/modals/signInModal/signInModal.module.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div class="modal-container" id="signInModal">
+    <div class="modal-content" id="container">
+      <span class="close-modal" id="close-modal">&times;</span>
+      <div class="sign-up">
+        <form>
+          <h1 class ="title">Create Account</h1>
+          <div class="icons">
+            <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+          </div>
+          <span>or use your email for registration</span>
+          <input type="text" placeholder="Name">
+          <input type="text" placeholder="Email">
+          <input type="password" placeholder="Password">
+          <button type="button" id="register">Sign Up</button>
+        </form>
+      </div>
+      <div class="sign-in">
+        <form>
+          <h1 class="title">Sign In</h1>
+          <div class="icons">
+            <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
+            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+          </div>
+          <span>or use your email password</span>
+          <input type="text" placeholder="Email">
+          <input type="password" placeholder="Password">
+          <a href="#">Forgot Your Password?</a>
+          <button type="button" id="login">Sign In</button>
+        </form>
+      </div>
+      <div class="toggle-container">
+        <div class="toggle">
+          <div class="toggle-panel toggle-left">
+            <h1>Welcome Back!</h1>
+            <p>Enter your personal details to use all of site features</p>
+            <button class="hidden" id="sign-in">Sign In</button>
+          </div>
+          <div class="toggle-panel toggle-right">
+            <h1>Hello, Friend!</h1>
+            <p>Register with your personal details to use all of site features</p>
+            <button class="hidden" id="sign-up">Sign Up</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  
+</body>
+</html>
