update deals ui

--- a/frontend/src/components/header/header.html
+++ b/frontend/src/components/header/header.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="#">Community</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Deals</a>
+            <a class="nav-link" href="../../pages/deals/deals.html" data-link="deals">Deals</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Sells</a>
